# AntColony

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md  vcpkg.json
.devcontainer/: Dockerfile  devcontainer.json
cmake/modules/: core.cmake  dependencies.cmake  library.cmake  linux-setup.cmake  main.cmake  osxcross-setup.cmake  sanitizers.cmake  static-analysis.cmake  tests.cmake  windows-setup.cmake
cmake/modules/common/: dejavu-fonts-config.cmake  glad-config.cmake  glm-config.cmake  stb-config.cmake
cmake/modules/linux/: glfw3-config.cmake  linux-toolchain.cmake  opengl-config.cmake
cmake/modules/macOS/: glfw3-config.cmake  opengl-config.cmake
cmake/modules/windows/: opengl-config.cmake  windows-arm64-llvm.cmake  windows-toolchain.cmake  windows-x64-llvm.cmake
documentation/: build-for-macos.md
src/: ant.cpp  ant.h  antManager.cpp  antManager.h  colony.cpp  colony.h  constants.h  entity.cpp  entity.h  food.cpp  food.h  foodManager.cpp  foodManager.h  main.cpp  main.cpp.bak  viewPort.cpp  viewPort.h
src/core/: _fwd.hpp  color.cpp  color.hpp  logger.hpp  point.cpp  point.hpp  viewPort.cpp  viewPort.hpp
src/render/: _fwd.hpp  frameContext.hpp  render.cpp  render.hpp  renderContext.hpp  renderEngines.hpp  renderer.hpp
src/render/glfw/: _fwd.hpp  constants.hpp  glRenderContext.cpp  glRenderContext.hpp  glRenderer.cpp  glRenderer.hpp  glShaderProvider.cpp  glShaderProvider.hpp  glShaders.cpp  glShaders.hpp  glTextRenderer.cpp  glTextRenderer.hpp  glfwFrameContext.cpp  glfwFrameContext.hpp  glfwRenderContext.cpp  glfwRenderContext.hpp  glfwRenderer.cpp  glfwRenderer.hpp
src/render/glfw/text/: _fonts.cpp  _fonts.hpp  _fwd.hpp  font.hpp  glyphInfo.hpp
src/simulation/: ant.cpp  ant.h  ant.hpp  antManager.cpp  antManager.h  antManager.hpp  baseEntity.cpp  baseEntity.hpp  baseEntityManager.cpp  baseEntityManager.hpp  colony.cpp  colony.h  colony.hpp  counter.cpp  counter.hpp  entity.cpp  entity.h  entity.hpp  food.cpp  food.h  food.hpp  foodManager.cpp  foodManager.h  foodManager.hpp  pheromone.cpp  pheromone.hpp  pheromoneManager.cpp  pheromoneManager.hpp  pheromoneSignal.cpp  pheromoneSignal.hpp  simulation.cpp  simulation.hpp
src/utils/: consoleLogger.cpp  consoleLogger.hpp  randomGenerator.cpp  randomGenerator.hpp  viewPort.cpp  viewPort.h  viewPort.hpp
tests/: fakeLogger.hpp
tests/simulation/: foodDistributionAnalyzer.hpp  foodDistributionVisualizer.hpp  foodManager.benchmarks.cpp  foodManager.tests.cpp  foodManagerFixture.hpp
